Add back integration/terraform project validation job
This partially reverts change I966378eb9cd3bcbdeb70af2d1db4fef1b65df338
which removed validation job for terraform files.

Change-Id: I9f7ece456515df4306b47e31e76d0fa74ecda7a1
Issue-ID: INT-1713
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/integration-terraform.yaml
+++ b/jjb/integration/integration-terraform.yaml
@@ -38,3 +38,18 @@
     stream:
       - 'master':
           branch: 'master'
+
+- project:
+    name: integration-terraform-validate
+    project: integration/terraform
+    project-name: integration-terraform
+    jobs:
+      - integration-terraform-verify
+    subproject:
+      - 'openlab':
+          tox-dir: 'openlab'
+          tox-envs: 'terraform'
+          pattern: 'openlab/**'
+    stream:
+      - 'master':
+          branch: 'master'
