Revert "remove terragrunt check as it has been moved in a dedicated repo"
This reverts commit 70a97ad469f64419d3dfb575da63d35cb2b29fc0.

Reason for revert: <openlab tox target is correct and shall not be removed>

Change-Id: I79dea2f54f42d9cfc534f317911127b54fcc0980
Signed-off-by: mrichomme <morgan.richomme@orange.com>
Issue-ID: INT-1792

--- a/jjb/integration/integration-terraform.yaml
+++ b/jjb/integration/integration-terraform.yaml
@@ -8,33 +8,16 @@
       - gerrit-info-yaml-verify
 
 - project:
-    name: integration-terraform-linters
+    name: integration-terraform-validate
     project: integration/terraform
     project-name: integration-terraform
-    python-version: python3
     jobs:
-      - integration-linters
+        - integration-terraform-verify
     subproject:
-      - 'yaml':
-          tox-dir: '.'
-          tox-envs: 'yaml'
-          pattern: '**/*.yaml'
-      - 'yml':
-          tox-dir: '.'
-          tox-envs: 'yaml'
-          pattern: '**/*.yml'
-      - 'json':
-          tox-dir: '.'
-          tox-envs: 'json'
-          pattern: '**/*.json'
-      - 'python':
-          tox-dir: '.'
-          tox-envs: 'py'
-          pattern: '**/*.py'
-      - 'md':
-          tox-dir: '.'
-          tox-envs: 'md'
-          pattern: '**/*.md'
+        - 'openlab':
+              tox-dir: 'openlab'
+              tox-envs: 'terraform'
+              pattern: 'openlab/**'
     stream:
-      - 'master':
-          branch: 'master'
+        - 'master':
+              branch: 'master'
