--- a/jjb/integration/integration-terraform.yaml
+++ b/jjb/integration/integration-terraform.yaml
@@ -8,33 +8,20 @@
       - gerrit-info-yaml-verify
 
 - project:
-    name: integration-terraform-linters
+    name: integration-terraform-validate
     project: integration/terraform
     project-name: integration-terraform
-    python-version: python3
     jobs:
-      - integration-linters
+        - integration-terraform-verify
     subproject:
-      - 'yaml':
-          tox-dir: '.'
-          tox-envs: 'yaml'
-          pattern: '**/*.yaml'
-      - 'yml':
-          tox-dir: '.'
-          tox-envs: 'yaml'
-          pattern: '**/*.yml'
-      - 'json':
-          tox-dir: '.'
-          tox-envs: 'json'
-          pattern: '**/*.json'
-      - 'python':
-          tox-dir: '.'
-          tox-envs: 'py'
-          pattern: '**/*.py'
-      - 'md':
-          tox-dir: '.'
-          tox-envs: 'md'
-          pattern: '**/*.md'
+        - 'openlab':
+              tox-dir: 'openlab'
+              tox-envs: 'terraform'
+              pattern: 'openlab/**'
+        - 'terragrunt':
+              tox-dir: 'terragrunt'
+              tox-envs: 'terragrunt'
+              pattern: 'terragrunt/**'
     stream:
-      - 'master':
-          branch: 'master'
+        - 'master':
+              branch: 'master'
