--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -8,14 +8,28 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'guilin':
-          branch: 'guilin'
-      - 'frankfurt':
-          branch: 'frankfurt'
     functionality:
       - 'api'
     trigger_jobs:
       - 'policy-api-{stream}-merge-java'
+
+- project:
+    name: policy-api-csit
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'policy'
+    java-version: openjdk11
+    stream:
+      - 'frankfurt':
+          branch: frankfurt
+      - 'guilin':
+          branch: guilin
+    functionality:
+      - 'api'
+    trigger_jobs:
+      - 'policy-api-{stream}-merge-java'
+    robot-options: ''
 
 - project:
     name: policy-apex-pdp-csit
