--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -38,7 +38,7 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java':
           docker-pom: 'pom.xml'
-          mvn-params: "-P docker"
+          mvn-params: "-P cps-xnf-docker"
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
