Update Job verification job
The job was active for el alto release but was never updated
since El Alto

Issue-ID: DOC-710

Signed-off-by: morganrol <morgan.richomme@orange.com>
Change-Id: I8df2a38adeb300d67d9b21ba7176eddf4669ff4c

--- a/jjb/doc/doc.yaml
+++ b/jjb/doc/doc.yaml
@@ -18,16 +18,12 @@
     rtdproject: 'onap/58810/'
     mvn-settings: 'doc-settings'
     stream:
-      - amsterdam:
-          branch: 'amsterdam'
-      - beijing:
-          branch: 'beijing'
-      - casablanca:
-          branch: 'casablanca'
-      - dublin:
-          branch: 'dublin'
-      - elalto:
-          branch: 'elalto'
+      - master:
+          branch: 'master'
+      - guilin:
+          branch: 'guilin'
+      - frankfurt:
+          branch: 'frankfurt'
 
 - project:
     name: doc-info
