--- a/jjb/doc/doc.yaml
+++ b/jjb/doc/doc.yaml
@@ -18,16 +18,10 @@
     rtdproject: 'onap/58810/'
     mvn-settings: 'doc-settings'
     stream:
-      - amsterdam:
-          branch: 'amsterdam'
-      - beijing:
-          branch: 'beijing'
-      - casablanca:
-          branch: 'casablanca'
-      - dublin:
-          branch: 'dublin'
-      - elalto:
-          branch: 'elalto'
+      - master:
+          branch: 'master'
+      - guilin:
+          branch: 'guilin'
 
 - project:
     name: doc-info
