[AAI][OOM] use helm3 to verify helm
As AAI/OOM is a subproject of OOM, changes done in OOM must be also done
on AAI/OOM

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I69d2f96d437e86ab2e6a9842d3f65590a8391a6a

--- a/jjb/aai/aai-oom.yaml
+++ b/jjb/aai/aai-oom.yaml
@@ -31,10 +31,10 @@
         #!/bin/bash
         set -e -o pipefail
         cd kubernetes/
-        make all
+        make HELM_BIN=helm3 all
     build_script: |
         #!/bin/bash
-        cd kubernetes/
-        make common
-        make {helm-module}
+      cd kubernetes/
+        make HELM_BIN=helm3 common
+        make HELM_BIN=helm3 {helm-module}
     oom_post_build_script: !include-raw-escape: shell/publish_helm_charts.sh
