Update ran-simulator job to fix pom file not found error
Issue-ID: INT-1849
Signed-off-by: Niranjana <niranjana.y60@wipro.com>
Change-Id: I8974040ce2af605caedf686e3029bd7e6fb41a39

--- a/jjb/integration/simulators/integration-ran-simulator.yaml
+++ b/jjb/integration/simulators/integration-ran-simulator.yaml
@@ -15,6 +15,7 @@
           - '{project-name}-{stream}-verify-java':
                 mvn-goals: 'clean install'
                 pattern: 'ransim/**'
+                mvn-pom: 'ransim/pom.xml'
           - '{project-name}-{stream}-merge-java':
                 mvn-goals: 'clean deploy'
           -  '{project-name}-gerrit-release-jobs':
