[OOM] Use specific HELM_BIN depending on branch
Guilin branch supports only helm < 3.4 whereas helm master supports helm
<=3.5.x
Therefore, we must be able to choose the right binary for each branch.

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I2c193a477f3a920f402d72ece9e2a814a27f756a

--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -56,6 +56,7 @@
 
     <<: *helm_job_boiler_plate
     concurrent: true
+    helm_bin: helm3
 
     scm:
       - gerrit-trigger-scm:
@@ -69,10 +70,13 @@
           server: '{server-name}'
           project: '{project}'
           branch: '{branch}'
+          helm_bin: '{helm_bin}'
           files: '{files}'
 
     builders:
       - lf-infra-pre-build
+      - inject:
+          properties-content: 'HELM_BIN={helm_bin}'
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
 
