[OOM] Use specific HELM_BIN depending on branch
Guilin branch supports only helm < 3.4 whereas helm master supports helm
<=3.5.x
Therefore, we must be able to choose the right binary for each branch.

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I2c193a477f3a920f402d72ece9e2a814a27f756a

--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -12,18 +12,20 @@
       #!/bin/bash
       set -e -o pipefail
       cd kubernetes/
-      make HELM_BIN=helm3 all
+      make all
     subproject_build_script: |
       #!/bin/bash
       cd kubernetes/
-      make HELM_BIN=helm3 common
-      make HELM_BIN=helm3 {subproject}
+      make common
+      make {subproject}
 
     stream:
       - "master":
           branch: "master"
+          helm_bin: "helm3"
       - "guilin":
           branch: "guilin"
+          helm_bin: "helm3.3"
       - "frankfurt":
           branch: "frankfurt"
       - "dublin":
@@ -47,6 +49,9 @@
           build_script: "{oom_build_script}"
           files: "**"
           build-timeout: 240
+          stream:
+            - master
+            - guilin
       - "{project-name}-{stream}-merge-helm":
           build_script: "{oom_build_script}"
           files: "**"
