policy-pap-csit using project level jjb
tested on jenkins sandbox.

Change-Id: I304229fd3591028b0e40d96fe7543c34ea388705
Issue-ID: POLICY-2895
Signed-off-by: Taka Cho <takamune.cho@att.com>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -1,4 +1,19 @@
 - project:
+    name: policy-pap-project-csit
+    jobs:
+      - '{project-name}-{stream}-project-csit-{functionality}'
+    project-name: 'policy-pap'
+    recipients: 'jrh3@att.com ram.krishna.verma@est.tech'
+    project: 'policy/docker'
+    stream:
+      - 'master':
+          branch: 'master'
+    functionality:
+      - 'pap'
+    trigger_jobs:
+      - 'policy-pap-{stream}-merge-java'
+
+- project:
     name: policy-api-project-csit
     jobs:
       - '{project-name}-{stream}-project-csit-{functionality}'
@@ -103,8 +118,6 @@
     java-version: openjdk11
     recipients: 'jrh3@att.com ram.krishna.verma@est.tech'
     stream:
-      - 'master':
-          branch: master
       - 'frankfurt':
           branch: frankfurt
       - 'guilin':
