Fix helm provision file
Helm 3.3 needs to be stored in a directory
called helm3_3. It was created by mistake as
helm3

Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I1efca0454647399e829ef0fb28f85f8c18efc7ed

--- a/packer/provision/helm.yaml
+++ b/packer/provision/helm.yaml
@@ -42,7 +42,7 @@
       block:
         - name: create directory
           file:
-            path: /tmp/helm3
+            path: /tmp/helm3_3
             state: directory
         - name: 'Fetch tar.gz'
           get_url:
