--- a/jjb/integration/simulators/integration-ran-simulator.yaml
+++ b/jjb/integration/simulators/integration-ran-simulator.yaml
@@ -15,9 +15,10 @@
           - '{project-name}-{stream}-verify-java':
                 mvn-goals: 'clean install'
                 pattern: 'ransim/**'
-                mvn-pom: 'ransim/pom.xml'
+                pom: 'ransim/pom.xml'
           - '{project-name}-{stream}-merge-java':
                 mvn-goals: 'clean deploy'
+                pom: 'ransim/pom.xml'
           -  '{project-name}-gerrit-release-jobs':
                  build-node: centos7-docker-8c-8g
           - gerrit-maven-stage:
