move policy-apex csit to project level
tested on jenkins sandbox

Change-Id: I241cf7d9ae0c9c46a7ed3ac8e387c925cc10b0a5
Issue-ID: POLICY-2895
Signed-off-by: Taka Cho <takamune.cho@att.com>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -1,4 +1,19 @@
 - project:
+    name: policy-apex-pdp-project-csit
+    jobs:
+      - '{project-name}-{stream}-project-csit-{functionality}'
+    project-name: 'policy-apex-pdp'
+    recipients: 'liam.fallon@est.tech ram.krishna.verma@est.tech'
+    project: 'policy/docker'
+    stream:
+      - 'master':
+          branch: 'master'
+    functionality:
+      - 'apex-pdp'
+    trigger_jobs:
+      - 'policy-apex-pdp-{stream}-merge-java'
+
+- project:
     name: policy-pap-project-csit
     jobs:
       - '{project-name}-{stream}-project-csit-{functionality}'
@@ -55,8 +70,6 @@
     java-version: openjdk11
     recipients: 'liam.fallon@est.tech ram.krishna.verma@est.tech'
     stream:
-      - 'master':
-          branch: master
       - 'frankfurt':
           branch: frankfurt
       - 'guilin':
