--- a/jjb/so/so-adapters-so-etsi-sol005-adapter.yaml
+++ b/jjb/so/so-adapters-so-etsi-sol005-adapter.yaml
@@ -23,6 +23,12 @@
           sign-artifacts: true
           build-node: centos7-builder-4c-4g
           maven-versions-plugin: true
+      - gerrit-maven-docker-stage:
+          build-node: ubuntu1804-docker-v1-8c-8g
+          maven-versions-plugin: true
+          mvn-params: '-P docker -DskipTests'
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
           build-node: centos7-docker-8c-8g
     project: 'so/adapters/so-etsi-sol005-adapter'
