--- a/jjb/so/so-adapters-so-etsi-sol003-adapter.yaml
+++ b/jjb/so/so-adapters-so-etsi-sol003-adapter.yaml
@@ -60,3 +60,17 @@
     mvn-settings: 'so-adapters-so-etsi-sol003-adapter-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: so-adapters-so-etsi-sol003-adapter-clm
+    java-version: openjdk11
+    jobs:
+      - gerrit-maven-clm
+    nexus-iq-namespace: 'onap-'
+    project: 'so/adapters/so-etsi-sol003-adapter'
+    project-name: 'so-adapters-so-etsi-sol003-adapter'
+    build-node: ubuntu1804-docker-v1-8c-8g
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'so-adapters-so-etsi-sol003-adapter-settings'
