--- a/jjb/so/so-so-etsi-nfvo.yaml
+++ b/jjb/so/so-so-etsi-nfvo.yaml
@@ -60,3 +60,17 @@
     mvn-settings: 'so-so-etsi-nfvo-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: so-so-etsi-nfvo-clm
+    java-version: openjdk11
+    jobs:
+      - gerrit-maven-clm
+    nexus-iq-namespace: 'onap-'
+    project: 'so/so-etsi-nfvo'
+    project-name: 'so-so-etsi-nfvo'
+    build-node: ubuntu1804-docker-v1-8c-8g
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'so-so-etsi-nfvo-settings'
