Remove tox verify override
Change-Id: I49c8341e9f886d64bfa6daf19bd1029779b168af
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2621

--- a/jjb/dcaegen2/dcaegen2-collectors-snmptrap.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-snmptrap.yaml
@@ -14,9 +14,7 @@
     build-node: ubuntu1804-docker-8c-8g
     mvn-settings: 'dcaegen2-collectors-snmptrap-settings'
     jobs:
-      - gerrit-tox-verify:
-          stream: all
-          branch: '*'
+      - gerrit-tox-verify
       - gerrit-docker-verify
       - gerrit-docker-merge
       - '{project-name}-{stream}-release-version-java-daily'
