Upgrade to guilin branch
Issue-ID: SO-3530

Signed-off-by: MD IRSHAD SHEIKH <md.irshad.sheikh@huawei.com>
Change-Id: I79bdca9410fd99f0d8f29c5386465f0f225b1133

--- a/jjb/so/so-csit.yaml
+++ b/jjb/so/so-csit.yaml
@@ -10,8 +10,12 @@
     stream:
       - 'master':
           branch: 'master'
+          java-version: openjdk11
       - 'frankfurt':
           branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
+          java-version: openjdk11
     functionality:
       - 'integration-testing':
           trigger_jobs:
