Setup JavaScript linter for integration-ietf-actn-tools project
Change-Id: I7d47489cafd251579de83121b2a1fedeb234a3fa
Issue-ID: CIMAN-33
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/integration-ietf-actn-tools.yaml
+++ b/jjb/integration/integration-ietf-actn-tools.yaml
@@ -41,6 +41,10 @@
           tox-dir: '.'
           tox-envs: 'md'
           pattern: '**/*.md'
+      - 'js':
+          tox-dir: '.'
+          tox-envs: 'js'
+          pattern: '**/*.js'
     stream:
       - 'master':
           branch: 'master'
