--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -51,12 +51,11 @@
 # JOB TEMPLATES #
 #################
 - job-template:
-    name: '{project-name}-{stream}-verify-helm'
+    name: '{project-name}-{stream}-verify-{helm_bin}'
     # Job template for helm verify jobs
 
     <<: *helm_job_boiler_plate
     concurrent: true
-    helm_bin: helm3
 
     scm:
       - gerrit-trigger-scm:
@@ -75,8 +74,8 @@
 
     builders:
       - lf-infra-pre-build
-      - inject:
-          properties-content: 'HELM_BIN={helm_bin}'
+      - shell: |
+          echo "export HELM_BIN={helm_bin}" > helm.prop
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
 
@@ -104,6 +103,8 @@
       - lf-provide-maven-settings:
           global-settings-file: '{mvn-global-settings}'
           settings-file: '{mvn-settings}'
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
       - lf-infra-create-netrc:
@@ -151,6 +152,8 @@
       - inject:
           properties-content: 'HELM_MODULE={helm-module}'
       - shell: !include-raw-escape: shell/apply-submodule-patch-oom.sh
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
 
@@ -192,6 +195,8 @@
       - lf-provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
       - lf-infra-create-netrc:
@@ -225,6 +230,8 @@
       - lf-provide-maven-settings:
           global-settings-file: '{mvn-global-settings}'
           settings-file: '{mvn-settings}'
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
       - lf-infra-create-netrc:
@@ -244,6 +251,8 @@
     disabled: true
     builders:
       - lf-infra-pre-build
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{pre_build_script}'
       - shell: '{build_script}'
       - shell: '{post_build_script}'
@@ -257,6 +266,8 @@
     disabled: true
     builders:
       - lf-infra-pre-build
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{pre_build_script}'
       - shell: '{build_script}'
       - shell: '{post_build_script}'
@@ -283,6 +294,8 @@
 
     builders:
       - lf-infra-pre-build
+      - shell: |
+          echo "export HELM_BIN=helm3.5" > helm.prop
       - shell: '{pre_build_script}'
       - shell: '{build_script}'
       - shell: '{post_build_script}'
