[OOM] Fix helm3.x job generation
It appeared that helm3.x job generation wasn't good.
This patch takes another approach that should help with that.

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I80a841f82195ee2975023fda34d23e4cf11185fa

--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -37,23 +37,35 @@
       - "robot":
           files: "kubernetes/robot/**"
 
+    helm_bin:
+      - helm3.5
+      - helm3.3
+
+    exclude:
+      - stream: guilin
+        helm_bin: helm3.5
+      - stream: frankfurt
+        helm_bin: helm3.5
+      - stream: frankfurt
+        helm_bin: helm3.3
+      - stream: dublin
+        helm_bin: helm3.5
+      - stream: dublin
+        helm_bin: helm3.3
+      - stream: casablanca
+        helm_bin: helm3.5
+      - stream: casablanca
+        helm_bin: helm3.3
     jobs:
       - "{project-name}-{stream}-image-verify":
           files: "**"
       - "{project-name}-{stream}-verify-helm2":
           files: "**"
           build-timeout: 360
-      - "{project-name}-{stream}-verify-helm":
+      - "{project-name}-{stream}-verify-{helm_bin}":
           build_script: "{oom_build_script}"
           files: "**"
           build-timeout: 360
-          stream: master
-      - "{project-name}-{stream}-verify-helm":
-          build_script: "{oom_build_script}"
-          files: "**"
-          build-timeout: 360
-          stream: guilin
-          helm_bin: "helm3.3"
       - "{project-name}-{stream}-merge-helm":
           build_script: "{oom_build_script}"
           files: "**"
