--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -51,12 +51,12 @@
 # JOB TEMPLATES #
 #################
 - job-template:
-    name: '{project-name}-{stream}-verify-helm'
+    name: '{project-name}-{stream}-verify-{helm_bin}'
     # Job template for helm verify jobs
 
     <<: *helm_job_boiler_plate
     concurrent: true
-    helm_bin: helm3
+    helm_bin: '{helm_bin}'
 
     scm:
       - gerrit-trigger-scm:
