[OOM] Fix helm3.x job generation
It appeared that helm3.x job generation wasn't good.
This patch takes another approach that should help with that.

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I80a841f82195ee2975023fda34d23e4cf11185fa

--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -51,12 +51,11 @@
 # JOB TEMPLATES #
 #################
 - job-template:
-    name: '{project-name}-{stream}-verify-helm'
+    name: '{project-name}-{stream}-verify-{helm_bin}'
     # Job template for helm verify jobs
 
     <<: *helm_job_boiler_plate
     concurrent: true
-    helm_bin: helm3
 
     scm:
       - gerrit-trigger-scm:
@@ -75,8 +74,6 @@
 
     builders:
       - lf-infra-pre-build
-      - inject:
-          properties-content: 'HELM_BIN={helm_bin}'
       - shell: '{obj:pre_build_script}'
       - shell: '{obj:build_script}'
 
