--- a/jjb/so/so-csit.yaml
+++ b/jjb/so/so-csit.yaml
@@ -21,4 +21,6 @@
           trigger_jobs:
       - 'integration-etsi-testing':
           trigger_jobs:
+      - 'macroflow':
+          trigger_jobs:
     robot-options: ''
