--- a/jjb/cps/cps-cps-tbdmt.yaml
+++ b/jjb/cps/cps-cps-tbdmt.yaml
@@ -1,14 +1,79 @@
 ---
 - project:
-    name: cps-cps-tbdmt-project-view
+    name: cps-tbdmt-project-view
     project-name: cps-cps-tbdmt
     views:
       - project-view
 
 - project:
-    name: cps-cps-tbdmt-info
+    name: cps-tbdmt-info
     project: cps/cps-tbdmt
     project-name: cps-cps-tbdmt
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+      name: cps-tbdmt-clm
+      java-version: openjdk11
+      mvn-version: "mvn36"
+      maven-version: "mvn36"
+      jobs:
+          - gerrit-maven-clm
+      nexus-iq-namespace: 'onap-'
+      project: cps/cps-tbdmt
+      project-name: cps-cps-tbdmt
+      branch: 'master'
+      mvn-settings: 'cps-cps-tbdmt-settings'
+      build-node: centos7-docker-8c-8g
+
+- project:
+      name: cps-tbdmt
+      java-version: openjdk11
+      mvn-version: "mvn36"
+      maven-version: "mvn36"
+      project-name: cps-cps-tbdmt
+      project: cps/cps-tbdmt
+      jobs:
+          - gerrit-maven-merge
+          - gerrit-maven-verify
+          - gerrit-maven-stage:
+                sign-artifacts: true
+                build-node: centos7-docker-8c-8g
+                maven-versions-plugin: true
+          - gerrit-maven-docker-stage:
+                build-node: centos7-docker-8c-8g
+                maven-versions-plugin: true
+                mvn-params: '-P docker'
+                container-public-registry: 'nexus3.onap.org:10001'
+                container-staging-registry: 'nexus3.onap.org:10003'
+          - '{project-name}-gerrit-release-jobs':
+                build-node: centos7-docker-8c-8g
+      stream:
+          - 'master':
+                branch: 'master'
+      mvn-settings: 'cps-cps-tbdmt-settings'
+      files: '**'
+      archive-artifacts: ''
+      build-node: centos7-docker-8c-8g
+
+- project:
+      name: cps-tbdmt-sonar
+      java-version: openjdk11
+      mvn-version: "mvn36"
+      maven-version: "mvn36"
+      jobs:
+          - gerrit-maven-sonar
+      sonarcloud: true
+      sonarcloud-project-organization: '{sonarcloud_project_organization}'
+      sonarcloud-api-token: '{sonarcloud_api_token}'
+      sonarcloud-project-key: '{sonarcloud_project_organization}_{project-name}'
+      sonar-mvn-goal: '{sonar_mvn_goal}'
+      cron: '@daily'
+      build-node: centos7-docker-8c-8g
+      project: cps/cps-tbdmt
+      project-name: cps-cps-tbdmt
+      branch: 'master'
+      mvn-settings: 'cps-cps-tbdmt-settings'
+      mvn-goals: 'clean install'
+      mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
