[SDC] Set concurrency option in integration template
Add the option to have concurrent builds for CSIT, default to false
Enable for SDC to avoid jobs piling up

Issue-ID: SDC-3465
Signed-off-by: ChrisC <christophe.closset@intl.att.com>
Change-Id: I8dfc8fc2e3e46287adfba9972b8ff22b247f95e1

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -137,6 +137,7 @@
     ######################
 
     branch: master
+    build-concurrent: false
     build-days-to-keep: 30 # 30 days in case a release takes long to get approved.
     build-node: ubuntu1804-docker-8c-8g
     build-timeout: 60
@@ -171,7 +172,7 @@
     #####################
     # Job Configuration #
     #####################
-
+    concurrent: "{build-concurrent}"
     properties:
       - lf-infra-properties:
           project: '{project}'
