[AAI] Update babel model loader schema service to java 11
Issue-ID: AAI-3009
Change-Id: I8e74633be05d9db28c2173b5fedc2d91c33e0aff
Signed-off-by: Harish Venkata Kajur <vk250x@att.com>

--- a/jjb/aai/aai-babel.yaml
+++ b/jjb/aai/aai-babel.yaml
@@ -32,6 +32,8 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1804-builder-4c-4g
+    java-version: openjdk11
+    mvn-version: 'mvn36'
 
 - project:
     name: aai-babel-sonar
@@ -50,6 +52,8 @@
     mvn-settings: 'aai-babel-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    java-version: openjdk11
+    mvn-version: 'mvn36'
 
 - project:
     name: aai-babel-clm
@@ -63,6 +67,8 @@
           branch: 'master'
     mvn-settings: 'aai-babel-settings'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    java-version: openjdk11
+    mvn-version: 'mvn36'
 
 
 - project:
