--- a/jjb/aai/aai-model-loader.yaml
+++ b/jjb/aai/aai-model-loader.yaml
@@ -32,6 +32,8 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1804-builder-4c-4g
+    mvn-version: 'mvn36'
+    java-version: openjdk11
 
 - project:
     name: aai-model-loader-sonar
@@ -50,6 +52,8 @@
     mvn-settings: 'aai-model-loader-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-version: 'mvn36'
+    java-version: openjdk11
 
 - project:
     name: aai-model-loader-clm
@@ -62,6 +66,8 @@
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-model-loader-settings'
+    mvn-version: 'mvn36'
+    java-version: openjdk11
 
 - project:
     name: aai-model-loader-info
@@ -83,3 +89,5 @@
     mvn-clean-install: true
     project: 'aai/model-loader'
     branch: master
+    java-version: openjdk11
+    mvn-version: 'mvn36'
