Add job for new pmmapper tests - file processing performance
Issue-ID: DCAEGEN2-2600
Signed-off-by: Piotr Marcinkiewicz <piotr.marcinkiewicz@nokia.com>
Change-Id: I99458f4a4fbf6be26b4113416e08a51684ca35ec

--- a/jjb/dcaegen2/dcaegen2-services-pmmapper-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-pmmapper-csit.yaml
@@ -11,5 +11,7 @@
     functionality:
       - 'pmmapper':
           trigger_jobs:
+      - 'files-processing-config-pmmapper':
+            trigger_jobs:
     robot-options: ''
     branch: 'master'
