--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -43,10 +43,11 @@
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
+          mvn-params: '-DprocessAllModules'
       - gerrit-maven-docker-stage:
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
-          mvn-params: '-P docker'
+          mvn-params: '-P cps-xnf-docker'
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
