--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -43,6 +43,7 @@
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
+          mvn-params: '-DprocessAllModules'
       - gerrit-maven-docker-stage:
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
