Update sparky be to use openjdk11
Issue-ID: AAI-3009
Change-Id: I1588970a257317f80443bc287ff503add358d4b0
Signed-off-by: Harish Venkata Kajur <vk250x@att.com>

--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -31,6 +31,8 @@
     mvn-settings: 'aai-sparky-be-settings'
     files: '**'
     archive-artifacts: ''
+    mvn-version: 'mvn36'
+    java-version: openjdk11
 
 - project:
     name: aai-sparky-be-sonar
@@ -49,6 +51,8 @@
     mvn-settings: 'aai-sparky-be-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-version: 'mvn36'
+    java-version: openjdk11
 
 - project:
     name: aai-sparky-be-clm
@@ -61,6 +65,8 @@
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-sparky-be-settings'
+    mvn-version: 'mvn36'
+    java-version: openjdk11
 
 - project:
     name: aai-sparky-be-info
