--- a/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
@@ -13,16 +13,38 @@
           branch: 'guilin'
     build-node: ubuntu1804-docker-8c-8g
     mvn-settings: 'dcaegen2-platform-policy-handler-settings'
-    subproject:
-      - 'policy-handler':
-          pattern: '**'
-          path: 'policyhandler'
     jobs:
-      - '{project-name}-{stream}-{subproject}-verify-python'
-      - '{project-name}-{subproject}-python-staging-{stream}'
-      - '{project-name}-{subproject}-python-release-{stream}'
-    files: '**'
+      - '{project-name}-python-jobs'
+      - gerrit-docker-verify
+      - gerrit-docker-merge:
+          post_docker_build_script: |
+              #!/bin/bash
+              set -uex -o pipefail
+              DOCKER_IMAGE_TAG2=${{DOCKER_IMAGE_TAG%-*}}
+              DNAME={container-snapshot-registry}/{docker-name}
+              docker tag $DNAME:$DOCKER_IMAGE_TAG $DNAME:$DOCKER_IMAGE_TAG2
+              docker tag $DNAME:$DOCKER_IMAGE_TAG $DNAME:latest
+              docker push $DNAME:$DOCKER_IMAGE_TAG2
+              docker push $DNAME:latest
+      - '{project-name}-gerrit-release-jobs':
+          build-node: centos7-docker-8c-8g
+
     archive-artifacts: ''
+    nexus-iq-namespace: 'onap-'
+    maven-deploy-properties: |
+      deployAtEnd=true
+    mvn-snapshot-id: 'ecomp-snapshots'
+    nexus-snapshot-repo: 'snapshots'
+    files: '**'
+    gerrit_trigger_file_paths:
+      - compare-type: REG_EXP
+        pattern: '.*'
+    container-tag-method: latest
+    docker-root: '.'
+    docker-name: onap/org.onap.dcaegen2.platform.policy-handler
+    docker-get-container-tag-script: ../../shell/docker-ts-tag-override.sh
+
+
 
 - project:
     name: dcaegen2-platform-policy-handler-sonar
