Add maven remporally debug
to collect more information

Issue-ID: CPS-239
Signed-off-by: Claudio D. Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: I07aba7bfbfa2faebb83589e55d2d3a12b8e99bba

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -35,15 +35,15 @@
     project-name: 'cps'
     project: 'cps'
     jobs:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java':
+      - gerrit-maven-verify
+      - gerrit-maven-merge
           docker-pom: 'pom.xml'
           mvn-params: "-P cps-xnf-docker"
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
-          mvn-params: '-DprocessAllModules'
+          mvn-params: '-DprocessAllModules -DskipTests -X'
       - gerrit-maven-docker-stage:
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
