Add CSIT verify jobs to DMaaP
Issue-ID: DMAAP-1551
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I63d94fb563f5b0ef2570201a730e9736700811d8

--- a/jjb/dmaap/dmaap-csit.yaml
+++ b/jjb/dmaap/dmaap-csit.yaml
@@ -3,6 +3,7 @@
     name: dmaap-csit
     jobs:
       - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-{stream}-verify-csit-{functionality}'
     project-name: 'dmaap'
     recipients: 'ms5838@att.com'
     stream: 'master'
