--- a/jjb/dmaap/dmaap-buscontroller-csit.yaml
+++ b/jjb/dmaap/dmaap-buscontroller-csit.yaml
@@ -3,6 +3,7 @@
     name: dmaap-buscontroller-csit
     jobs:
       - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-{stream}-verify-csit-{functionality}'
     project-name: 'dmaap-buscontroller'
     stream: 'master'
     disabled: false
