--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -10,6 +10,15 @@
                 mvn-params: '-Dnpm.registry=https://nexus3.onap.org/repository/npm.public/ -Ddocker.skip.push=true -P docker,all-for-integration-tests-only'
                 maven-versions-plugin: true
                 build-concurrent: true
+                archive-artifacts: >
+                    **/*.log
+                    **/hs_err_*.log
+                    **/target/**/feature.xml
+                    **/target/failsafe-reports/failsafe-summary.xml
+                    **/target/surefire-reports/*-output.txt
+                    integration-tests/target/ExtentReport/API/*.html
+                    integration-tests/target/ExtentReport/UI/*.html
+                    integration-tests/target/ExtentReport/UI/screenshots/*.png
           - '{project-name}-merge-verification-maven-{stream}':
                 build-node: ubuntu1804-docker-8c-16g
                 container-public-registry: 'nexus3.onap.org:10001'
