--- a/jjb/aai/aai-babel.yaml
+++ b/jjb/aai/aai-babel.yaml
@@ -9,8 +9,8 @@
     name: aai-babel
     project-name: 'aai-babel'
     jobs:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-verify
+      - gerrit-maven-merge
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-builder-4c-4g
