--- a/jjb/aai/aai-babel.yaml
+++ b/jjb/aai/aai-babel.yaml
@@ -9,8 +9,9 @@
     name: aai-babel
     project-name: 'aai-babel'
     jobs:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-verify
+      - gerrit-maven-merge:
+          cron: '@daily'
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-builder-4c-4g
@@ -34,6 +35,8 @@
     build-node: ubuntu1804-builder-4c-4g
     java-version: openjdk11
     mvn-version: 'mvn36'
+    nexus-snapshot-repo: 'snapshots'
+    mvn-snapshot-id: 'ecomp-snapshots'
 
 - project:
     name: aai-babel-sonar
