[OOM] Disable Helm2 verification on master branch
Master branch is not helm2 compatible now.
So let's remove job verification with helm2 for this branch.

Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I342a0e7e0e04132badf2279257310b3a969fb286

--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -63,6 +63,9 @@
       - "{project-name}-{stream}-verify-helm2":
           files: "**"
           build-timeout: 360
+          stream:
+            - guilin
+            - frankfurt
       - "{project-name}-{stream}-verify-{helm_bin}":
           build_script: "{oom_build_script}"
           files: "**"
